Bunch of stuff added: - Persistance in DB (pgsql) - Migrations - Fiber as underlying http server - Simple auth, using API keys - Swagger doc with examples and testing enabled
